# covid_analysis_thesis

./: .editorconfig  .gitignore  README.md  makefile  pyproject.toml
consumption/: data_analysis.py
data_ingestion/: data_consumption.py
ingestion/: __init__.py  ingest.py  ingest_esus.py  ingest_pysus.py
modeling/: model_data.py
src/: __init__.py
tests/: __init__.py  mock_data.json  test_consumption.py  test_covid_project.py  test_data_consumption.py  test_ingestion.py
