[tool.poetry]
name = "covid-project"
version = "0.1.0"
description = ""
authors = ["Daidson Alves <daidson.alves@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
selenium = "^4.2.0"
pytest = "^7.1.2"
pyparsing = "^3.0.9"
toml = "^0.10.2"
six = "^1.16.0"
attrs = "^21.4.0"
iniconfig = "^1.1.1"
more-itertools = "^8.13.0"
packaging = "^21.3"
pluggy = "^1.0.0"
py = "^1.11.0"
apipkg = "^2.1.1"
execnet = "^1.9.0"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
