[tool.poetry]
name = "covid-project"
version = "0.1.0"
description = ""
authors = ["Daidson Alves <daidson.alves@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.27.1"
selenium = "^4.2.0"
pytest = "^7.1.2"
pyparsing = "^3.0.9"
toml = "^0.10.2"
six = "^1.16.0"
attrs = "^21.4.0"
iniconfig = "^1.1.1"
more-itertools = "^8.13.0"
packaging = "^21.3"
pluggy = "^1.0.0"
py = "^1.11.0"
apipkg = "^2.1.1"
execnet = "^1.9.0"
pytest-cov = "^3.0.0"
mypy = "^0.960"
types-requests = "^2.27.29"
black = "^22.3.0"
spark = "^0.2.1"
pyspark = "^3.2.1"
quinn = "^0.9.0"
pandas = "^1.4.2"
numpy = "^1.22.4"
pytest-mock = "^3.7.0"
llvmlite = "^0.38.1"
PySUS = "^0.5.16"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
